@@ -1,5 +1,6 @@
 Version 2.02.186 - 
 ================================
+  Prevent shared active mirror LVs with lvmlockd.
 
 Version 2.02.185 - 13th May 2019
 ================================
